--- a/src/DapperDemo.API/appsettings.Development.json
+++ b/src/DapperDemo.API/appsettings.Development.json
@@ -6,6 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=192.168.29.167,1433;Database=DapperDemoDb;User Id=admin;Password=admin;MultipleActiveResultSets=true;TrustServerCertificate=True;"
-  }
+    "DapperConnectinString": "Server=192.168.29.167,1433;Database=DapperDemoDb;User Id=admin;Password=admin;MultipleActiveResultSets=true;TrustServerCertificate=True;",
+    "OtherDbConectionString": "Server=192.168.29.167,1433;Database=DapperDemoDb;User Id=admin;Password=admin;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+  },
+  "IsLocal": true
 }
