--- a/src/DapperDemo.DAL/DapperDemo.DAL.csproj
+++ b/src/DapperDemo.DAL/DapperDemo.DAL.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DapperDemo.Domain\DapperDemo.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
