Done Generate DApperSQL manger Dynmaic Class

--- a/src/DapperDemo.API/appsettings.Development.json
+++ b/src/DapperDemo.API/appsettings.Development.json
@@ -5,9 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {
+  "MyAppSettings": {
     "DapperConnectinString": "Server=192.168.29.167,1433;Database=DapperDemoDb;User Id=admin;Password=admin;MultipleActiveResultSets=true;TrustServerCertificate=True;",
-    "OtherDbConectionString": "Server=192.168.29.167,1433;Database=DapperDemoDb;User Id=admin;Password=admin;MultipleActiveResultSets=true;TrustServerCertificate=True;"
-  },
-  "IsLocal": true
+    "OtherDbConectionString": "Server=192.168.29.167,1433;Database=DapperDemoDb;User Id=admin;Password=admin;MultipleActiveResultSets=true;TrustServerCertificate=True;",
+    "IsLocal": true
+  }
 }
