--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/src/DapperDemo.API/wwwroot/ErrorLogs
+/src/DapperDemo.API/wwwroot/PerformanceLogs
