--- a/src/DapperDemo.API/DapperDemo.API.csproj
+++ b/src/DapperDemo.API/DapperDemo.API.csproj
@@ -9,6 +9,8 @@
 		<ProjectReference Include="..\DapperDemo.DAL\DapperDemo.DAL.csproj" />
 		<ProjectReference Include="..\DapperDemo.Database\DapperDemo.Database.csproj" />
 		<ProjectReference Include="..\DapperDemo.Domain\DapperDemo.Domain.csproj" />
+		<PackageReference Include="FluentValidation" Version="12.0.0" />
+		<PackageReference Include="FluentValidation.AspNetCore" Version="11.3.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.3" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.7" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.7" />
