make the Auth api

--- a/src/DapperDemo.API/appsettings.Development.json
+++ b/src/DapperDemo.API/appsettings.Development.json
@@ -9,5 +9,11 @@
     "DapperConnectinString": "Server=192.168.29.167,1433;Database=DapperDemoDb;User Id=admin;Password=admin;MultipleActiveResultSets=true;TrustServerCertificate=True;",
     "OtherDbConectionString": "Server=192.168.29.167,1433;Database=DapperDemoDb;User Id=admin;Password=admin;MultipleActiveResultSets=true;TrustServerCertificate=True;",
     "IsLocal": true
+  },
+ 
+  "Jwt": {
+    "Key": "A@9s8df@9283sdf^2389r8sdFASDF9823",
+    "Issuer": "DapperDemoAPI",
+    "Audience": "DapperDemoClient"
   }
 }
