--- a/src/DapperDemo.Domain/DapperDemo.Domain.csproj
+++ b/src/DapperDemo.Domain/DapperDemo.Domain.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
+  </ItemGroup>
 	
 
 </Project>
